got login to work

--- a/src/main/resources/templates/signup-form.html
+++ b/src/main/resources/templates/signup-form.html
@@ -7,14 +7,14 @@
 <body>
     <h1>Sign-Up</h1>
     <p></p>
-    <form action="/login" method="POST">
-        <p>First Name: <input id="firstname"></p>
-        <p>Last Name: <input id="lastname"></p>
-        <p>Date of Birth: <input id="dob"></p>
-        <p>Bio: <input id="bio"></p>
-        <p>Username: <input id="username"></p>
-        <p>Password: <input id="password"></p>
-        <button type="submitubmit">Sign-up</button>
+    <form action="/signup" method="POST">
+        <p>First Name: <input name="firstName"></p>
+        <p>Last Name: <input name="lastName"></p>
+        <p>Date of Birth: <input name="dateOfBirth"></p>
+        <p>Bio: <input name="bio"></p>
+        <p>Username: <input name="username"></p>
+        <p>Password: <input name="password"></p>
+        <button type="submit">Sign-up</button>
     </form>
 </body>
 </html>
