--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -2,10 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Home Page</title>
+    <title>Login Page</title>
 </head>
 <body>
-    <h1>CodeFellowers</h1>
+<h1>Welcome</h1>
+
+    <a href="/signup">Sign-Up</a>
+
 
 </body>
 </html>
