--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,9 +7,9 @@
 <body>
     <h1>Login</h1>
     <p></p>
-    <form>
-        <p>Username: <input></p>
-        <p>Password: <input></p>
+    <form action="/login" method="post">
+        <p>Username: <input name="username"></p>
+        <p>Password: <input name="password"></p>
         <button type="submit">Login</button>
     </form>
 
